--- a/SCSS/Notion like No Bullet Editor Mode.scss
+++ b/SCSS/Notion like No Bullet Editor Mode.scss
@@ -299,10 +299,6 @@
 			left: var(--treenode-line-spacing);
 			margin-right: var(--treenode-line-spacing);
 		}
-		// Portal
-		.portal-tree-node-box {
-			margin-left: -3px;
-		}
 	}
 	// List Card TreeNode Alert Color
 		.node-card-item {
